tests/paczka1/small_fuzzy/11935753.err
Error in line 8: cKb8 S979 69,2
Error in line 12: 03JXTYg A326 76,2
